--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "de.adorsys.android.smsparsertest"
         minSdkVersion 9
         targetSdkVersion 25
-        versionCode 1
-        versionName "0.0.1"
+        versionCode versionCode
+        versionName "${versionName}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
