--- a/smsparser/src/main/AndroidManifest.xml
+++ b/smsparser/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true">
         <receiver
