Updated gradle to v26 and minSdk to 14

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ plugins {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
 
