Updated gradle task to use doTask instead of <<
The command << will be deprecated starting from Gradle 5.0

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,6 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-task('pV') << {
+task('pV').doLast {
     println "${versionName}"
 }
