Added pmd and checkstyle checks to build.gradle of sample project module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+// Apply static code analysis configuration
+apply from: './checks.gradle'
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
