--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,11 @@ android:
     - $HOME/.gradle/daemon
     - $HOME/.gradle/native
     - $HOME/.gradle/wrapper
+before_script:
+  - ./code-check.sh
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 after_success:
   - ./bintray-upload.sh
