--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ android:
   components:
   - tools
   - platform-tools
-  - android-26
-  - build-tools-26.0.1
+  - android-27
+  - build-tools-27.0.2
   - extra-android-m2repository
   - extra-google-m2repository
   - extra-android-support
@@ -27,6 +27,8 @@ android:
     - $HOME/.gradle/daemon
     - $HOME/.gradle/native
     - $HOME/.gradle/wrapper
+before_install:
+    - yes | sdkmanager "platforms;android-27"
 before_script:
   - ./code-check.sh
 after_success:
