--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ buildscript {
     ext.versionName = '1.0.1'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        //noinspection GradleDependency
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
@@ -18,9 +20,7 @@ plugins {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com'
-        }
+        google()
     }
 }
 
