--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,65 @@
 language: android
 jdk: oraclejdk8
+dist: trusty
+sudo: false
+
+notifications:
+  email: false
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 branches:
-  only:
-  - master
-  - develop
+  except:
+    - gh-pages
+
+stages:
+  - Build
+  - Deploy
+
+matrix:
+  fast_finish: false
+  include:
+    - env: API=28
+      stage: Build
+      script:
+        - ./gradlew :securepreferencesx:clean --stacktrace
+        - ./gradlew :securepreferencesx:build --stacktrace
+    - env: API=28
+      stage: Deploy
+      script:
+        - bash .travis/bintray_upload.sh
+
 android:
   components:
-  - tools
-  - platform-tools
-  - android-27
-  - build-tools-27.0.2
-  - extra-android-m2repository
-  - extra-google-m2repository
-  - extra-android-support
-  - extra-google-google_play_services
-  sudo: false
-  licenses:
-  - android-sdk-preview-license-.+
-  - android-sdk-license-.+
-  - google-gdk-license-.+
-  - intel-android-extra-license.+
-  cache:
-    directories:
-    - $HOME/.gradle/caches/2.8
-    - $HOME/.gradle/caches/jars-1
-    - $HOME/.gradle/daemon
-    - $HOME/.gradle/native
-    - $HOME/.gradle/wrapper
-before_install:
-    - yes | sdkmanager "platforms;android-27"
-before_script:
-  - ./code-check.sh
-after_success:
-  - ./bintray-upload.sh
+    # installing tools to start, then use `sdkmanager` below to get the rest
+    - tools
+
+licenses:
+  - 'android-sdk-preview-license-.+'
+  - 'android-sdk-license-.+'
+  - 'google-gdk-license-.+'
+
+env:
+  global:
+    - ADB_INSTALL_TIMEOUT=10
+    - ABI=x86_64
+    - EMU_FLAVOR=default # use google_apis flavor if no default flavor emulator
+    # PATH order is incredibly important. e.g. the 'emulator' script exists in more than one place!
+    - ANDROID_HOME=/usr/local/android-sdk
+    - TOOLS=${ANDROID_HOME}/tools
+    - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
+
+# Get everything needed for android processes
+install:
+  - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning
+  - echo y | sdkmanager "platform-tools" >/dev/null
+  - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
+  - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
+  - echo y | sdkmanager "platforms;android-$API" >/dev/null # We need the API of the emulator we will run
+  - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
