--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ allprojects {
         jcenter()
         google()
     }
+
+    tasks.withType(Javadoc).all {
+        enabled = false
+    }
 }
 
 task clean(type: Delete) {
