--- a/smsparser/checks.gradle
+++ b/smsparser/checks.gradle
@@ -14,7 +14,7 @@ task checkstyle(type: Checkstyle) {
 }
 
 task pmd(type: Pmd) {
-    ignoreFailures true
+    ignoreFailures false
     ruleSetFiles = files("${project.rootDir}/config/pmd.xml")
     ruleSets = ["java-basic", "java-braces", "java-strings"]
 
@@ -31,5 +31,9 @@ task pmd(type: Pmd) {
 android {
     lintOptions {
         abortOnError false
+    }
+
+    checkstyle {
+        toolVersion "7.6.1"
     }
 }
