Fix travis bug for deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
     - env: API=28
       stage: Deploy
       script:
-        - bash .travis/bintray_upload.sh
+        - bash .travis/bintray-upload.sh
 
 android:
   components:
