--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up JDK 1.8
-        uses: action/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: AssembleDebug SMS-parser
